--- a/aula16ex/ex018/ex019/index.html
+++ b/aula16ex/ex018/ex019/index.html
@@ -8,6 +8,19 @@
     <script src="script.js"></script>
     <style>
 
+        *{
+            background-color: rgb(34, 29, 29);
+            font-family:'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
+            color: aqua;
+
+        }
+
+        input{
+            background-color: aqua;
+            color: black;
+            font-weight: bolder;
+        }
+
     </style>
 </head>
 <body>
