--- a/aula16ex/ex018/index.html
+++ b/aula16ex/ex018/index.html
@@ -10,26 +10,28 @@
 </head>
 <body>
 
-    <div class="pai">
-        <div class="filho">
+   <header>
+     <h1>Vamos contar</h1>
+   </header>
 
-            <p>Inicio</p>
-            <input type="number" name="inicio" id="inicio">
-            <p>Fim</p>
-            <input type="number" name="fim" id="fim">
-            <p>Passo</p>
-            <input type="number" name="passo" id="passo">
-            <br>
-            <input type="button" value="Contar" onclick="contar()">
+   <section>
+    <div id="dados">
+       
+        <p>Início: <input type="number" name="inicio" id="txti"></p>
+        <p>Fim: <input type="number" name="fim" id="txtf"></p>
+        <p>Passo: <input type="number" name="passo" id="txtp"></p>
+        <p><input type="button" value="Contar" onclick="contar()"></p>
 
-            <div id="res">
-                contando:
-
-
-            </div>
-
-        </div>
     </div>
-    
+
+    <div id=res>
+        Preparando contagem
+
+    </div>
+   </section>
+   <footer>
+    <p>&copy; CursoemVideo</p>
+   </footer>
+
 </body>
 </html>
