exibição simplificada de arrays

--- a/aula15/index.html
+++ b/aula15/index.html
@@ -19,6 +19,28 @@
         num[4] = 30;
         console.log(num)
         console.log(num.sort())
+
+        /*
+        forma melhor de exibir vetores:
+
+        var pagamentos = [120, 20, 50]
+        for(pos = 0; pos < pagamentos.length; pos++){
+           console.log(pagamentos[pos])
+        }
+
+
+        forma mais simplificada
+
+
+        "Para cada posição deste array(num) irei mostrar o num pos"
+        for(let pos in num){
+            console.log(num[pos])
+        }
+ 
+
+
+*/
+
     </script>
 </body>
 </html>
