--- a/aula15/index.html
+++ b/aula15/index.html
@@ -36,9 +36,10 @@
         for(let pos in num){
             console.log(num[pos])
         }
+
+
+         pagamentos.indexOf(20) -> procura o valor 20 no array
  
-
-
 */
 
     </script>
