--- a/aula15/index.html
+++ b/aula15/index.html
@@ -58,8 +58,22 @@
 
     "Para cada posição deste array(num) irei mostrar o num pos"
 
-     console.log(num[pos]);
-    } for(var pos in num){
+
+      for(var pos in num){
+         console.log(num[pos])
+      }
+
+    console.log(num.sort());
+
+    num.push(100);
+    console.log(num)
+
+  
+    
+
+
+
+
       
 
     </script>
