--- a/desafioAnNum/index.html
+++ b/desafioAnNum/index.html
@@ -16,11 +16,11 @@
     <main>
     <p>entre 1 e 100</p>
     <input type="number" name="number" id="impt">
-    <input type="button" value="Adicionar" onclick="adicionar()">
+    <input type="button" value="adicionar" onclick="adicionar()">
 
     <br>
     <br>
-    <select name="" id="numbers" size="10">
+    <select name="" id="lista" size="10">
         
     </select>
 
