--- a/tratamento_erros/index.html
+++ b/tratamento_erros/index.html
@@ -9,27 +9,20 @@
     <!--Tratamento de erros é justamente uma tecnica que podemos enpregar em aolgumas partes do nosso código para evitar que erros interrompam a nossa aplicação, podemos deixar a aplicação reativa-->
 
     <input type="number" name="" id="n1">
-    <input type="number" name="" id="n2">
     <button id="btn" onclick="somar()">Go</button>
     
 </body>
 <script>
-
-    try{/*o try pega o erro, no entanto não faz nada.*/
-        function somar(){
-          var numero1 = (window.document.getElementById('n1').value;
-          var numero2 = parseFloat(window.document.getElementById('n2').value;
-
-          var tot = (numero1 + numero2)
-        }
-    }catch(erro)/*Tratar a excessão*/{
-  
-    } finally/*Código que sempre deve ser executado.*/{
-    }
-
-    function verificarTexto(){
-        alert('opa');
-    }
+  try {
+  let numero;
+  if (numero === undefined) {
+    throw new Error("A variável 'numero' não está definida.");
+  }
+  let resultado = numero + 5;
+  console.log(resultado);
+} catch (e) {
+  console.error("Erro:", e.message);
+}
 </script>
 </body>
 </html>
