--- a/review-time_js/index.html
+++ b/review-time_js/index.html
@@ -10,6 +10,9 @@
     </span>
     <span class="timerContado">
     </span>
+
+    <button class="btnStop">Pausar</button>
+    <button class="btnGo">Continuar</button>
     <script src="script.js"></script>
 </body>
 </html>
